--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
          <div class="wrapper">
             <a href="#">
-            <img src="Profile.jpg" alt="">
+            <img src="images/Profile.jpg" alt="">
             </a>
             <div class="title">
                Bulbul Tomar
